--- a/Areas/User/Views/Deshboard/Index.cshtml
+++ b/Areas/User/Views/Deshboard/Index.cshtml
@@ -192,7 +192,7 @@
 
 
                 <div class="col-xl-3 col-md-6 mb-4">
-                    <a asp-area="Rider" asp-controller="Rider" asp-action="Index" class="card-link">
+                    <a asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" class="card-link">
                         <div class="card border-left-warning shadow h-100 py-2">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
@@ -559,6 +559,12 @@
                 <a asp-area="Farmer" asp-controller="FarmerShop" asp-action="Edit" asp-route-id="@ViewBag.ShopId" class="nav-link btn  btn-secondary">
                     <i class="fa-solid fa-pen-to-square"></i> Edit Shop
                 </a>
+
+                <a asp-area="Farmer" asp-controller="Inventory" asp-action="AllOrdersWithOrderTakenCondition" class="nav-link btn  btn-secondary">
+                    <i class="fa-solid fa-pen-to-square"></i> Release Order
+                </a>
+
+                
             </div>
 
 
