--- a/Views/Shared/Extra/_Layout1.cshtml
+++ b/Views/Shared/Extra/_Layout1.cshtml
@@ -196,7 +196,7 @@
                 </p>
           
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="Rider"  asp-controller="Rider" asp-action="Index">
+                    <a class="nav-link" asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index">
                         <i class="fa-solid fa-truck"></i>
                         <span>My Ride</span>
                     </a>
