Update User Register and Login UI Validation

--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<div class="container">
+<div class="container mt-3">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
+<div class="text-center justify-content-center">
+        <h3>@ViewData["Title"]</h3>
+        <p>
+            Please check your email to reset your password.
+        </p>
+</div>
 
-<h3>@ViewData["Title"]</h3>
-<p>
-    Please check your email to reset your password.
-</p>
 </div>
 
