--- a/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -5,6 +5,11 @@
 }
 
 <header>
+    <div class="container mt-4 text-center justify-content-center">
+
+
     <h3 class="text-danger">@ViewData["Title"]</h3>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h4 class="text-danger">This account has been locked out, please try again later.</h4>
+
+    </div>
 </header>
