--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,129 +3,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-@*
-<div class="container mt-2">
-    <div class="row">
 
-        <div class="col-md-6">
-            <div class=" p-3">
-                <div class="text-center">
-                    <figure>
-                        <img src="https://static.vecteezy.com/system/resources/previews/015/411/104/original/paper-package-with-fresh-healthy-products-organic-food-from-the-farm-vegetables-and-fruits-food-delivery-flat-illustration-vector.jpg" alt="Sign up image" style="height:300px; width:85%" class="img-fluid">
-                    </figure>
-                    <h4>Already a member ?</h4>
-                    <a asp-area="Identity" asp-page="/Account/Login" style="width:150px; border-radius:10px" class="btn btn-primary"> Sign In</a>
-                </div>
-                <div class="text-center mt-4">
-                    <h4>Sign up with Other Services</h4>
-                    <div class="mt-4">
-                        <a href="#" style="width:60px" class="btn btn-danger mb-3"><i class="fa-brands fa-google"></i></a>
-                        <a href="#" style="width:60px" class="btn btn-primary mb-3"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#" style="width:60px"  class="btn btn-success mb-3"><i class="fa-brands fa-microsoft"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mt-10 p-10 " >
-            <div class="card shadow-sm p-2" style="border-radius: 10px; height: 100%; min-height: 450px; width:450px; padding:10px">
-                <form asp-route-returnUrl="@Model.ReturnUrl" method="post" style="margin:20px">
-                  
-                    <p class="text-center h3 fw-bold mb-3">Sign up</p>
-
-                    <div class="row mb-3">
-                        <div class="col-md-6 mt-2">
-                            
-                            <input asp-for="Input.FirstName" class="form-control" placeholder="First Name">
-                            <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                        </div>
-                        <div class="col-md-6 mt-2">
-                          
-                            <input asp-for="Input.LastName" class="form-control" placeholder="Last Name">
-                            <span asp-validation-for="Input.LastName" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        
-                        <input asp-for="Input.Email" class="form-control" placeholder="Your Email">
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3  position-relative">
-                       
-                            <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password" id="passwordField">
-                            <div class="input-group-append">
-                            <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);" onclick="togglePassword()">
-                                    <i class="fas fa-eye" id="togglePasswordIcon"></i>
-                                </span>
-                            </div>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-
-                    <div class="mb-3 position-relative">
-                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Repeat your password" id="confirmPasswordField">
-                        <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);" onclick="togglePassword2()">
-                            <i class="fas fa-eye" id="toggleConfirmPasswordIcon"></i>
-                        </span>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-
-
-
-                    <div class="mb-4">
-                        <h4> Role : </h4>
-                        <div class="form-check form-check">
-                            <input class="form-check-input" type="checkbox" name="roles" value="Customer">
-                            <label class="form-check-label">Customer</label>
-                        </div>
-                        <div class="form-check form-check">
-                            <input class="form-check-input" type="checkbox" name="roles" value="Farmer">
-                            <label class="form-check-label">Farmer</label>
-                        </div>
-                        <div class="form-check form-check">
-                            <input class="form-check-input" type="checkbox" name="roles" value="Rider">
-                            <label class="form-check-label">Rider</label>
-                        </div>
-                    </div>
-
-                    <button class="btn btn-primary w-100" style=" border-radius:10px" type="submit">Register</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script>
-    function togglePassword() {
-        const passwordField = document.getElementById("passwordField");
-        const togglePasswordIcon = document.getElementById("togglePasswordIcon");
-        if (passwordField.type === "password") {
-            passwordField.type = "text";
-            togglePasswordIcon.classList.replace("fa-eye", "fa-eye-slash");
-        } else {
-            passwordField.type = "password";
-            togglePasswordIcon.classList.replace("fa-eye-slash", "fa-eye");
-        }
-    }
-
-    function togglePassword2() {
-        const passwordField = document.getElementById("confirmPasswordField");
-        const togglePasswordIcon = document.getElementById("toggleConfirmPasswordIcon");
-        if (passwordField.type === "password") {
-            passwordField.type = "text";
-            togglePasswordIcon.classList.replace("fa-eye", "fa-eye-slash");
-        } else {
-            passwordField.type = "password";
-            togglePasswordIcon.classList.replace("fa-eye-slash", "fa-eye");
-        }
-    }
-</script>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
- *@
 
 <div class="container mt-2">
     <div class="row">
@@ -189,6 +67,17 @@
                         </span>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
+
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="text-danger">
+                            @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                            {
+                                <h4 style="margin-bottom:3px; font-size:14px">@error.ErrorMessage</h4>
+                            }
+                        </div>
+                    }
+
 
                     <div class="mb-4">
                         <h4> Role: </h4>
