--- a/Views/Shared/_ProductPartial.cshtml
+++ b/Views/Shared/_ProductPartial.cshtml
@@ -1,35 +1,54 @@
-﻿@model OnlineShop.Models.Products
+﻿@model List<OnlineShop.Models.Products>
 
-<div class="single_deals_product">
-    <div class="product_thumb">
-        <a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@Model.Id">
-            <img src="~/@Model.Image" style="height: 320px; width: 60%; border-top:5px;" alt="Card Image">
-        </a>
-        <div class="label_product">
-            <span class="label_sale">sale</span>
-        </div>
-        <div class="product_timing">
-            <div class="alarm_icone">
-                <i class="zmdi zmdi-timer"></i>
+@foreach (var product in Model)
+{
+    <div class="single_deals_product">
+        <div class="product_thumb">
+            <a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id">
+                <img src="~/@product.Image" style="height: 320px; width: 60%; border-top:5px;" alt="Card Image">
+            </a>
+            <div class="label_product">
+                <span class="label_sale">sale</span>
             </div>
-            <div data-countdown="2024/11/31"></div>
+            <div class="product_timing">
+                <div class="alarm_icone">
+                    <i class="zmdi zmdi-timer"></i>
+                </div>
+                <div data-countdown="@GetCountdownValue(product.ExpirationTime)"></div>
+            </div>
+        </div>
+        <div class="product_content mt-5">
+            <div class="product_name">
+                <h3><a href="product-details.html">@product.Name</a></h3>
+            </div>
+            <div class="price_box">
+                <span class="current_price">@product.Price ৳</span>
+            </div>
+            <div class="action_links">
+                <ul>
+                    <li class="add_to_cart">
+                        <a asp-action="Detail" asp-area="Customer" asp-controller="Home" asp-route-id="@product.Id" title="add to cart">
+                            <i class="zmdi zmdi-shopping-cart-plus"></i> Order Now
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="product_content mt-5">
-        <div class="product_name">
-            <h3><a href="product-details.html">@Model.Name</a></h3>
-        </div>
-        <div class="price_box">
-            <span class="current_price"> @Model.Price ৳ </span>
-        </div>
-        <div class="action_links">
-            <ul>
-                <li class="add_to_cart">
-                    <a asp-action="Detail" asp-area="Customer" asp-controller="Home" asp-route-id="@Model.Id" title="add to cart">
-                        <i class="zmdi zmdi-shopping-cart-plus"></i> Order Now
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+}
+
+@functions {
+    private string GetCountdownValue(DateTime expirationTime)
+    {
+        TimeSpan timeRemaining = expirationTime - DateTime.Now;
+
+        if (timeRemaining.TotalSeconds < 0)
+        {
+            return "2024/01/01"; 
+        }
+        else
+        {
+            return expirationTime.ToString("yyyy/MM/dd");
+        }
+    }
+}
