Create Rider Due

--- a/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
+++ b/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
@@ -11,7 +11,9 @@
     <div class="d-flex justify-content-end mb-3">
         <a href="@Url.Action("AdminViewWithdrawals", "Wallet")" class="btn btn-primary">Manage Withdraw</a>
         <a style="margin-left:7px" asp-area="Customer" asp-controller="Order" asp-action="CardOrders" class="btn btn-info">Manage Card Orders</a>
-        <a style="margin-left:7px" asp-area="Customer" asp-controller="Order" asp-action="CashOrders" class="btn btn-info">Cash On Delivary</a>
+        <a style="margin-left:7px" asp-area="Customer" asp-controller="Order" asp-action="CashOrders" class="btn btn-primary">Cash On Delivary</a>
+        <a style="margin-left:7px" asp-area="User" asp-controller="Deshboard" asp-action="PayableRidersDue" class="btn btn-warning">Rider Due List</a>
+    
     </div>
 
 
