--- a/Areas/Farmer/Views/FarmerShop/Create.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrganicOption.Models.FarmerShop
 
-<h3 class="text-info text-center">Add New Shop</h3>
+<h4 class="text-info text-center mt-3" style="font-size:25px">Create New Shop</h4>
 
 <div class="container mt-4">
     <div class="row justify-content-center">
@@ -9,7 +9,7 @@
                 <div class="p-4 rounded border">
                     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label asp-for="ShopName" class="col-lg-3 col-form-label"></label>
                         <div class="col-lg-9">
                             <input asp-for="ShopName" class="form-control" />
@@ -17,14 +17,14 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">Is Open:</label>
                         <div class="col-lg-9">
                             <input type="checkbox" asp-for="IsShopOpen" />
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">Cover Photo:</label>
                         <div class="col-lg-9">
                             <input asp-for="CoverPhoto" class="form-control" type="file" />
@@ -32,28 +32,28 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">Latitude:</label>
                         <div class="col-lg-9">
                             <input type="text" asp-for="Latitude" class="form-control" />
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">Longitude:</label>
                         <div class="col-lg-9">
                             <input type="text" asp-for="Longitude" class="form-control" />
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">Contract Information:</label>
                         <div class="col-lg-9">
                             <input type="text" asp-for="ContractInfo" class="form-control" />
                             <span asp-validation-for="ContractInfo" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group row mt-2">
                         <label class="col-lg-3 col-form-label">NID:</label>
                         <div class="col-lg-9">
                             <input type="text" asp-for="NID" class="form-control" />
@@ -64,7 +64,7 @@
                     <input type="hidden" asp-for="FarmerUserId" value="@User.Identity.Name" />
 
                     <div class="form-group text-center mt-4">
-                        <input type="submit" class="btn btn-primary" value="Save" />
+                        <input type="submit" class="btn btn-primary w-100" value="Save" />
                     </div>
                 </div>
             </form>
