--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -392,7 +392,7 @@
                                 </div>
                                 <div class="product_content">
                                     <div class="product_name">
-                                        <h3><a href="product-details.html">@product.Name</a></h3>
+                                        <h3><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id">@product.Name</a></h3>
                                     </div>
                                     <div class="product_rating">
                                         <ul>
@@ -439,7 +439,7 @@
                                 </div>
                                 <div class="product_content">
                                     <div class="product_name">
-                                        <h3><a href="product-details.html">@product.Name</a></h3>
+                                        <h3><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id">@product.Name</a></h3>
                                     </div>
                                     <div class="product_rating">
                                         <ul>
@@ -484,7 +484,7 @@
                                 </div>
                                 <div class="product_content">
                                     <div class="product_name">
-                                        <h3><a href="product-details.html">@product.Name</a></h3>
+                                        <h3><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id">@product.Name</a></h3>
                                     </div>
                                     <div class="product_rating">
                                         <ul>
